--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.0.6",
     "babel-plugin-macros": "^3.1.0",
     "dayjs": "^1.11.3",
+    "emotion-theming": "^11.0.0",
     "framer-motion": "^6.4.3",
     "plop": "^3.1.1",
     "react": "^18.2.0",
@@ -85,6 +86,7 @@
     "babel-plugin-named-exports-order": "^0.0.2",
     "prop-types": "^15.8.1",
     "storybook-addon-react-router-v6": "^0.1.10",
+    "storybook-dark-mode": "^1.1.0",
     "webpack": "^5.73.0"
   }
 }
